--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "1.5.8",
+    "angular-i18n": "1.5.8",
+    "angular-messages": "1.5.8",
+    "angular-route": "1.5.8",
+    "bootstrap": "3.3.7"
+  }
 }
