--- a/bower.json
+++ b/bower.json
@@ -18,10 +18,10 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "1.5.8",
-    "angular-i18n": "1.5.8",
-    "angular-messages": "1.5.8",
-    "angular-route": "1.5.8",
-    "bootstrap": "3.3.7"
+    "angular": "~1.5.8",
+    "angular-i18n": "~1.5.8",
+    "angular-messages": "~1.5.8",
+    "angular-route": "~1.5.8",
+    "bootstrap": "~3.3.7"
   }
 }
